# my-ids

./: .gitignore  AGGREGATION_ANALYSIS.md  AGGREGATION_LAYER.md  API_CONFIG_ENDPOINTS.md  BRUTE_FORCE_QUICKSTART.md  DASHBOARD_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DIAGNOSTIC_FINDINGS.md  FEATURE_COMPLETE_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  PACKAGING_SUMMARY.md  PIPX_INSTALLATION.md  README.md  SUSPICIOUS_CLASSIFICATION_FEATURE.md  SUSPICIOUS_CLASSIFICATION_QUICK_REFERENCE.md  SUSPICIOUS_CLASSIFICATION_SUMMARY.md  capture.py  diagnose_aggregation.py  flow.py  ids_cli.py  install.sh  main.py  pyproject.toml  random_forest_cicids2017.ipynb  random_forest_cicids2017_v2.ipynb  requirements.txt  run_server.py  setup.py  test_api.py  test_dashboard_integration.py  test_pipeline.py  test_suspicious_classification.py  test_v2_model.py
ids_api/: __init__.py  app.py  dns_utils.py  routes.py
ids_cli/: __init__.py  cli.py  config.py  daemon.py
ids_core/: __init__.py  flow_aggregator.py  model_loader.py  pipeline.py
ids_core/store/: __init__.py  db.py
ids_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
web/: __init__.py  index.html  script.js  style.css
