[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ids-cli"
version = "1.0.0"
description = "Network Intrusion Detection System CLI"
requires-python = ">=3.8"
dependencies = [
    "blinker==1.9.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.6",
    "click==8.3.1",
    "Flask==3.1.3",
    "flask-cors==6.0.2",
    "idna==3.11",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "joblib==1.5.3",
    "MarkupSafe==3.0.3",
    "numpy==2.4.3",
    "pandas==3.0.1",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.5",
    "scapy==2.7.0",
    "scikit-learn==1.6.1",
    "scipy==1.17.1",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
    "urllib3==2.6.3",
    "Werkzeug==3.1.6",
]

[project.scripts]
ids-cli = "ids_cli.cli:main"

[tool.setuptools]
include-package-data = true
py-modules = ["run_server", "flow", "capture"]

[tool.setuptools.packages.find]
include = ["ids_api*", "ids_cli*", "ids_core*", "web*"]

[tool.setuptools.package-data]
web = ["*.html", "*.css", "*.js"]